2004-04-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Fixed a bug dealing with an empty var.

2004-04-23  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/optcode.h:
	  Fix noises.

2004-04-23  Iwata <b6330015@ipc.kit.jp>

	* timidity/speex_a.c: Add
	* configure.in, timidity/output.c, timidity/timidity.c,
	  timidity/Makefile.am: Add OggSpeex support

2004-04-21  Saito <saito@intaa.net>

	* timidity/flac_a.c: Fix around filename at Win32GUI interface.

2004-04-20  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix a little

2004-04-19  Saito <saito@intaa.net>

	* timidity/flac_a.c: Fix for VC++ environments.

2004-04-18  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: fix for libAO detection
	* autoconf/libFLAC.m4, autoconf/libOggFLAC.m4: Add.
	* configure.in: Change to use above
	* autoconf/Makefile.am: ditto

2004-04-18  Iwata <b6330015@ipc.kit.jp>

	* timidity/flac_a.c: Add
	* configure.in, timidity/output.c, timidity/timidity.c,
	  timidity/Makefile.am: Add libFLAC support

2004-04-14  Kentaro Sato <kentaro@ranvis.com>

	* libarc/arc.c, timidity/timidity.c:
	  Removed trailing directory separator from $basedir.

2004-04-13  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* autoconf/ao.m4: Add.
	* configure.in: Change to use ao.m4
	* autoconf/Makefile.am (EXTRA_DIST): ditto.

2004-04-13  Iwata <b6330015@ipc.kit.jp>

	* timidity/ao_a.c: Add.
	* configure.in: Add libao support
	* timidity/output.c: ditto.
	* timidity/Makefile.am (EXTRA_timidity_SOURCES): ditto.
	* timidity/timidity.c (parse_opt_h): ditto.

2004-04-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/common.[ch], timidity/timidity.c:
	  New syntax of *.cfg: $VARIABLE / ${VARIABLE}
	  They are replaced with the specific string before tokenizing.
	  $basedir is the only implemented one, which represents the base
	  directory of the cfg file being parsed.

2004-03-31  URABE Shyouhei <shyouhei@ice.uec.ac.jp>
